Implemented authentication and added unit and integration tests and swagger docs
