# config/routes.rb
@@ -6,7 +6,8 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :users, only: [:create]
+      resources :users, only: [:create], path: 'signup'
+      post 'login', to: 'sessions#create'
     end
   end
 end
